Modified patch for HARMONY-2556 ([classlib] [luni] Fixes for some minor issues in the java.lang and java.io packages found by Melody)
git-svn-id: https://svn.apache.org/repos/asf/harmony/enhanced/classlib/trunk@485770 13f79535-47bb-0310-9956-ffa450edef68